<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/welcomeFragment">

    <fragment
        android:id="@+id/mapFragment"
        android:name="fr.thomas.lefebvre.toutougo.ui.map.MapFragment"
        android:label="@string/bottom_map"
        tools:layout="@layout/fragment_map" >
        <action
            android:id="@+id/action_mapFragment_to_createPlaceFragment"
            app:destination="@id/createPlaceFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@+id/createPlaceFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/evenementFragment"
        android:name="fr.thomas.lefebvre.toutougo.ui.evenement.EvenementFragment"
        android:label="@string/bottom_evenement"
        tools:layout="@layout/fragment_evenements" />

    <fragment
        android:id="@+id/welcomeFragment"
        android:name="fr.thomas.lefebvre.toutougo.ui.dashboard.DashBoardFragment"
        android:label="@string/bottom_accueil"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/actionEdit"
            app:destination="@id/userInfosFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/actionEditDog"
            app:destination="@id/editFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_welcomeFragment_to_dogInfosFragment2"
            app:destination="@id/dogInfosFragment2"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/promeneurFragment"
        android:name="fr.thomas.lefebvre.toutougo.ui.promeneur.PromeneurFragment"
        android:label="@string/bottom_promeneurs"
        tools:layout="@layout/fragment_promeneur" />
    <fragment
        android:id="@+id/placeFragment"
        android:name="fr.thomas.lefebvre.toutougo.ui.place.PlaceFragment"
        android:label="@string/bottom_chemin"
        tools:layout="@layout/fragment_place" >
        <action
            android:id="@+id/actionCreatePlace"
            app:destination="@id/createPlaceFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/userInfosFragment"
        android:name="fr.thomas.lefebvre.toutougo.ui.presentation.UserInfosFragment"
        android:label="UserInfosFragment" >
        <action
            android:id="@+id/action_userInfosFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@+id/welcomeFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/editFragment"
        android:name="fr.thomas.lefebvre.toutougo.ui.edit.EditFragment"
        android:label="EditFragment" >
        <action
            android:id="@+id/action_editFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@+id/welcomeFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/dogInfosFragment2"
        android:name="fr.thomas.lefebvre.toutougo.ui.presentation.DogInfosFragment"
        android:label="DogInfosFragment" />
    <fragment
        android:id="@+id/createPlaceFragment"
        android:name="fr.thomas.lefebvre.toutougo.ui.place.CreatePlaceFragment"
        android:label="CreatePlaceFragment" >
        <action
            android:id="@+id/actionPhotoPlace"
            app:destination="@id/photoPlaceFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_createPlaceFragment_to_mapFragment"
            app:destination="@id/mapFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/photoPlaceFragment"
        android:name="fr.thomas.lefebvre.toutougo.ui.place.PhotoPlaceFragment"
        android:label="PhotoPlaceFragment" >
        <action
            android:id="@+id/action_photoPlaceFragment_to_placeFragment"
            app:destination="@id/placeFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@+id/placeFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>